Rename project to "Basketball Hand Game" and implement basketball game mechanics including scoring, ball physics, and confetti effects. Update HTML content and enhance JavaScript for game functionality.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hand Music Generator</title>
+  <title>Basketball Hand Game</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hand Gesture Music Generator</h1>
+    <h1>Basketball Challenge</h1>
     <div class="video-container">
       <video id="webcam" autoplay playsinline></video>
       <canvas id="output-canvas"></canvas>
@@ -21,8 +21,8 @@
       <button id="stop-btn" disabled>Stop</button>
     </div>
     <div class="info">
-      <p>Move your hand in front of the camera. Each finger plays a different note.</p>
-      <p>The pitch changes as you move your fingers up and down.</p>
+      <p>Use your hands to hit the basketball and score points in the basket!</p>
+      <p>Each basket earns you one point with a confetti celebration.</p>
     </div>
   </div>
   <script src="script.js"></script>
